Tried to fix the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             #     echo Add other actions to build,
             #     echo test, and deploy your project.
             - name: Build
-                run: ./build.sh
+                run: bash ../../build.sh
     sonarcloud:
         runs-on: ubuntu-latest
         steps:
