--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,16 +31,16 @@ jobs:
             #   run: |
             #     echo Add other actions to build,
             #     echo test, and deploy your project.
-            - name: Build
-                run: bash ../../build.sh
+            - name: Build this file
+              run: bash ../../build.sh
     sonarcloud:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-                with:
-                    fetch-depth: 0
+              with:
+              fetch-depth: 0
             - name: SonarCloud Scan
-                uses: sonarsource/sonarcloud-github-action@master
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              uses: sonarsource/sonarcloud-github-action@master
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
