--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@server": "dist/Server"
     },
     "dependencies": {
+        "child_process": "^1.0.2",
         "command-line-args": "^5.1.1",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
