--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,6 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -105,3 +104,4 @@ dist
 
 # Build files
 build
+node_modules
