--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
         "@server": "dist/Server"
     },
     "dependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/mongodb": "^3.5.25",
+        "bcrypt": "^5.0.0",
+        "body-parser": "^1.19.0",
         "child_process": "^1.0.2",
         "command-line-args": "^5.1.1",
         "cookie-parser": "^1.4.5",
@@ -34,6 +38,7 @@
         "helmet": "^3.23.3",
         "http-status-codes": "^1.4.0",
         "module-alias": "^2.2.2",
+        "mongodb": "^3.5.9",
         "morgan": "^1.10.0",
         "pug": "^3.0.0",
         "winston": "^3.3.3"
