Disabling sonarcloud scan on main branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,15 @@ jobs:
             #       CI: true
             #       RESUMATOR_WEB_DB_USER: ${{ secrets.RESUMATOR_WEB_DB_USER }}
             #       RESUMATOR_WEB_DB_PASS: ${{ secrets.RESUMATOR_WEB_DB_PASS }}
-    sonarcloud:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-              with:
-                  fetch-depth: 0
-            - name: SonarCloud Scan
-              uses: sonarsource/sonarcloud-github-action@master
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # enable the plugin ONLY ON NON-MAIN BRANCH
+    # sonarcloud:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - uses: actions/checkout@v2
+    #           with:
+    #               fetch-depth: 0
+    #         - name: SonarCloud Scan
+    #           uses: sonarsource/sonarcloud-github-action@master
+    #           env:
+    #               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #               SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
