--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "target": "es6",
         "moduleResolution": "node",
         "paths": {
-            "@entities/*": ["src/entities/*"],
+            "@entities/*": ["src/entities/daos/*", "src/entities/puggables"],
             "@shared/*": ["src/shared/*"],
             "@server": ["src/Server"]
         },
