--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@types/jasmine": "^3.5.11",
         "@types/jsonfile": "^6.0.0",
         "@types/morgan": "^1.9.1",
+        "@types/multer": "^1.4.4",
         "@types/node": "^14.0.26",
         "@types/supertest": "^2.0.10",
         "character-parser": "^3.1.0",
