--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/mongodb": "^3.5.25",
+        "@types/multer-gridfs-storage": "^4.0.1",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "child_process": "^1.0.2",
         "command-line-args": "^5.1.1",
         "cookie-parser": "^1.4.5",
+        "crypto": "^1.0.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
@@ -40,8 +42,10 @@
         "jstransformer-markdown-it": "^2.1.0",
         "module-alias": "^2.2.2",
         "mongodb": "^3.5.9",
+        "mongoose": "^5.10.5",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "multer-gridfs-storage": "^4.2.0",
         "pug": "^3.0.0",
         "winston": "^3.3.3"
     },
