--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/bcrypt": "^3.0.0",
         "@types/mongodb": "^3.5.25",
         "@types/multer-gridfs-storage": "^4.0.1",
+        "@types/nodemailer": "^6.4.0",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
         "child_process": "^1.0.2",
@@ -47,6 +48,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "multer-gridfs-storage": "^4.2.0",
+        "nodemailer": "^6.4.16",
         "pug": "^3.0.0",
         "winston": "^3.3.3"
     },
