--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "sourceMap": true,
         "strict": true,
         "noImplicitAny": true,
+        "noImplicitReturns": true,
         "strictNullChecks": true,
         "target": "es6",
         "moduleResolution": "node",
