--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "jshint": "^2.12.0",
         "jsonfile": "^6.0.1",
         "mocha": "^8.2.1",
+        "mongo-mock": "^4.0.0",
         "nodemon": "^2.0.4",
         "object-assign": "^4.1.1",
         "pug-error": "^2.0.0",
