--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.projectKey=virajshah21
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=./src
+sonar.testExecutionReportPaths=test-report.xml
+sonar.tests=./spec
