--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,10 @@ jobs:
               run: npm install bcrypt --build-from-source
             - name: Build server
               run: npm run build
+            - name: Install Jest globally
+              run: sudo npm install -g jest
+            - name: Run Tests
+              run: npm run jest
             # - name: Start Server
             #   run: npm run start
             #   env:
