--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,7 @@ sonar.projectKey=virajshah21
 sonar.sources=./src
 sonar.testExecutionReportPaths=test-report.xml
 sonar.tests=./spec
+sonar.language=ts
+sonar.exclusions=**/spec/*.spec.ts
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.sourceEncoding=UTF-8
