--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "test": "nodemon --config ./spec/nodemon.json",
         "eslint": "eslint . --ext .ts",
         "jasmine": "jasmine-ts",
-        "coverage": "jest --config jest.config.js --coverage"
+        "coverage": "jest --config jest.config.js --coverage",
+        "coverage:serve": "serve coverage/lcov-report"
     },
     "nodemonConfig": {
         "watch": [
