--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "jasmine-ts": "^0.3.0",
         "jasmine-ts-console-reporter": "^3.1.1",
         "jest": "^26.6.3",
+        "jest-cli": "^26.6.3",
         "jshint": "^2.12.0",
         "jsonfile": "^6.0.1",
         "mocha": "^8.2.1",
