--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
             #     echo test, and deploy your project.
             - name: Rebuild bcrypt
               run: npm install bcrypt --build-from-source
+            - name: Rebuild jest
+              run: npm install jest --build-from-source
             - name: Build server
               run: npm run build
             - name: Coverage Tests
