--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
             - name: Rebuild bcrypt
               run: npm install bcrypt --build-from-source
             - name: Rebuild jest
-              run: npm install jest --build-from-source
+              run: npm install -g jest
             - name: Build server
               run: npm run build
             - name: Coverage Tests
