--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
             - name: Build server
               run: npm run build
             - name: Coverage Tests
-              run: npm run coverage
+              run: npm run coverage:github
             # - name: Start Server
             #   run: npm run start
             #   env:
