--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "eslint": "eslint . --ext .ts",
         "jasmine": "jasmine-ts",
         "coverage": "jest --config jest.config.js --coverage",
-        "coverage:serve": "serve coverage/lcov-report",
-        "coverage:github": "jest-ci --config jest.config.js --coverage"
+        "coverage:serve": "serve coverage/lcov-report"
     },
     "nodemonConfig": {
         "watch": [
@@ -35,7 +34,6 @@
         "@types/nodemailer": "^6.4.0",
         "bcrypt": "^5.0.0",
         "body-parser": "^1.19.0",
-        "bs-logger": "^0.2.6",
         "child_process": "^1.0.2",
         "cloudinary": "^1.23.0",
         "command-line-args": "^5.1.1",
@@ -49,6 +47,7 @@
         "jest": "^26.6.3",
         "jest-ci": "^0.1.1",
         "jest-cli": "^26.6.3",
+        "jest-sonar-reporter": "^2.0.0",
         "jstransformer-markdown-it": "^2.1.0",
         "module-alias": "^2.2.2",
         "mongodb": "^3.5.9",
