--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "moduleResolution": "node",
         "types": ["node", "jasmine"],
         "typeRoots": ["node_modules/@types"],
+        "rootDir": "src"
         // "lib": ["es2015", "dom"]
     },
     "include": ["src/**/*.ts", "spec/**/*.ts"],
